--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "twilio": "^5.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
