--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "dotenv": "^16.5.0",
-    "express": "^4.18.2",
-    "twilio": "^5.6.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
