--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "pg": "^8.16.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
